cynic-codegen/src/fragment_derive/arguments/snapshots/cynic_codegen__fragment_derive__arguments__tests__case_04_a_list_of_strings.snap
---
source: cynic-codegen/src/fragment_derive_2/arguments/tests.rs
assertion_line: 30
expression: "analyse(literals, field, Span::call_site()).map(|o| o.arguments)"

---
Ok(
    [
        Field {
            schema_field: InputValue {
                description: None,
                name: FieldName {
                    graphql_name: "filters",
                },
                value_type: NamedInputType(
                    "BookFilters",
                ),
            },
            value: Object(
                Object {
                    schema_obj: InputObjectType {
                        description: None,
                        name: "BookFilters",
                        fields: [
                            InputValue {
                                description: None,
                                name: FieldName {
                                    graphql_name: "authors",
                                },
                                value_type: NullableType(
                                    ListType(
                                        NamedInputType(
                                            "String",
                                        ),
                                    ),
                                ),
                            },
                            InputValue {
                                description: None,
                                name: FieldName {
                                    graphql_name: "state",
                                },
                                value_type: NullableType(
                                    NamedInputType(
                                        "BookState",
                                    ),
                                ),
                            },
                        ],
                    },
                    fields: [
                        Field {
                            schema_field: InputValue {
                                description: None,
                                name: FieldName {
                                    graphql_name: "authors",
                                },
                                value_type: NullableType(
                                    ListType(
                                        NamedInputType(
                                            "String",
                                        ),
                                    ),
                                ),
                            },
                            value: Some(
                                List(
                                    [
                                        Literal(
                                            Str(
                                                LitStr {
                                                    token: "Charles Stross",
                                                },
                                            ),
                                        ),
                                        Literal(
                                            Str(
                                                LitStr {
                                                    token: "Ann Leckie",
                                                },
                                            ),
                                        ),
                                    ],
                                ),
                            ),
                        },
                    ],
                },
            ),
        },
    ],
)
