cynic-codegen/src/fragment_derive/arguments/snapshots/cynic_codegen__fragment_derive__arguments__tests__case_06_an_enum.snap
---
source: cynic-codegen/src/fragment_derive/arguments/tests.rs
assertion_line: 32
expression: "analyse(literals, field, Some(&format_ident!(\"MyArguments\")),\n        Span::call_site()).map(|o| o.arguments)"

---
Ok(
    [
        Field {
            schema_field: InputValue {
                description: None,
                name: FieldName {
                    graphql_name: "filters",
                },
                value_type: NamedInputType(
                    "BookFilters",
                ),
            },
            value: Object(
                Object {
                    schema_obj: InputObjectType {
                        description: None,
                        name: "BookFilters",
                        fields: [
                            InputValue {
                                description: None,
                                name: FieldName {
                                    graphql_name: "authors",
                                },
                                value_type: NullableType(
                                    ListType(
                                        NamedInputType(
                                            "String",
                                        ),
                                    ),
                                ),
                            },
                            InputValue {
                                description: None,
                                name: FieldName {
                                    graphql_name: "state",
                                },
                                value_type: NullableType(
                                    NamedInputType(
                                        "BookState",
                                    ),
                                ),
                            },
                        ],
                    },
                    fields: [
                        Field {
                            schema_field: InputValue {
                                description: None,
                                name: FieldName {
                                    graphql_name: "state",
                                },
                                value_type: NullableType(
                                    NamedInputType(
                                        "BookState",
                                    ),
                                ),
                            },
                            value: Some(
                                Variant(
                                    VariantDetails {
                                        en: EnumType {
                                            description: None,
                                            name: "BookState",
                                            values: [
                                                EnumValue {
                                                    description: None,
                                                    name: "PUBLISHED",
                                                },
                                                EnumValue {
                                                    description: None,
                                                    name: "OUT_OF_PRINT",
                                                },
                                            ],
                                        },
                                        variant: "PUBLISHED",
                                    },
                                ),
                            ),
                        },
                    ],
                },
            ),
        },
    ],
)
