cynic-codegen/src/fragment_derive/arguments/snapshots/cynic_codegen__fragment_derive__arguments__tests__missing_nullable_scalars.snap
---
source: cynic-codegen/src/fragment_derive/arguments/tests.rs
expression: "analyse(literals, field, Some(&format_ident!(\"MyArguments\").into()),\n        Span::call_site()).map(|o| o.arguments)"
---
Ok(
    [
        Field {
            schema_field: InputValue {
                name: FieldName {
                    graphql_name: "anInt",
                },
                value_type: NullableType(
                    NamedInputType(
                        "Int",
                    ),
                ),
                has_default: false,
            },
            value: Some(
                Literal(
                    Int(
                        LitInt {
                            token: 1,
                        },
                    ),
                ),
            ),
        },
    ],
)
