cynic-codegen/src/fragment_derive/arguments/snapshots/cynic_codegen__fragment_derive__arguments__tests__top_level_variable.snap
---
source: cynic-codegen/src/fragment_derive/arguments/tests.rs
expression: "analyse(literals, field, Some(&format_ident!(\"MyArguments\").into()),\n        Span::call_site()).map(|o| o.arguments)"
---
Ok(
    [
        Field {
            schema_field: InputValue {
                name: FieldName {
                    graphql_name: "filters",
                },
                value_type: NamedInputType(
                    "BookFilters",
                ),
                has_default: false,
            },
            value: Variable(
                Variable {
                    ident: Ident(
                        aVariable,
                    ),
                    value_type: NamedInputType(
                        "BookFilters",
                    ),
                    variables_fields_struct: Path {
                        leading_colon: None,
                        segments: [
                            PathSegment {
                                ident: Ident(
                                    MyArguments,
                                ),
                                arguments: None,
                            },
                        ],
                    },
                },
            ),
        },
    ],
)
